examples/test/testpolicy10867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10867
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key29: value45
      key12: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
          key15: value8
      podSelector:
        matchLabels:
          key23: value12
          key20: value31
